--- a/public/pages/redeem.html
+++ b/public/pages/redeem.html
@@ -62,7 +62,7 @@
         }
 
         input[type="submit"]:hover {
-            background-color: #45a049;
+            background-color: #4554a0;
         }
 
     </style>
@@ -136,7 +136,7 @@
             <label for="pin">PIN:</label>
             <input type="password" id="pin" name="pin" minlength="4" maxlength="4" required>
 
-            <input type="submit" value="Submit">
+            <input type="submit" value="Redeem">
         </form>
         <div id="messages"></div>
     </div>
