--- a/public/pages/redeem.html
+++ b/public/pages/redeem.html
@@ -52,7 +52,7 @@
         }
 
         input[type="submit"] {
-            background-color: #4CAF50;
+            background-color: #4554a0;
             width: 100%;
             color: white;
             cursor: pointer;
